--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <title>Simple JS app</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <ul class="pokemon-list"></ul>
