--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <ul class="pokemon-list"></ul>
 
     <script src="js/scripts.js"></script>   
+    <script>src="js/promise-polyfill.js"</script>
   </body>
 </html>
