--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ul class="pokemon-list"></ul>
-
-    <script src="js/scripts.js"></script>   
     <script>src="js/promise-polyfill.js"</script>
-  </body>
+    <script> src="js/fetch-polyfill.js"</script>
+    <script src="js/scripts.js"></script>   
+   </body>
 </html>
