--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <title>Simple JS app</title>
-    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <ul class="pokemon-list"></ul>
-    <script>src="js/promise-polyfill.js"</script>
-    <script> src="js/fetch-polyfill.js"</script>
+    <script src="js/promise-polyfill.js"></scriptsrc></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>   
    </body>
 </html>
