updated code to use modals

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   </head>
   <body>
     <ul class="pokemon-list"></ul>
+    
     <script src="js/promise-polyfill.js"></scriptsrc></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>   
-   </body>
+
+    <div class="modal" id="modal-container">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h1 class="modal-title"></h1>
+        <img class="modal-image" src="" alt="Pokemon Image">
+        <p class="modal-details"></p>
+      </div>
+    </div>
+  </body>
 </html>
