corrected div id

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>   
 
-    <div class="modal" id="modal-container">
+    <div id="modal-container">
       <div class="modal-content">
         <span class="close-button">&times;</span>
-        <h1 class="modal-title"></h1>
+        <h2 class="modal-title"></h2>
         <img class="modal-image" src="" alt="Pokemon Image">
         <p class="modal-details"></p>
       </div>
