--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple JS app</title>
     </head>
   <body>
-    <ul class="pokemon-list"></ul>
+    <ul class="pokemon-list list-group"></ul>
     
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
