--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link text-white" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Pricing</a>
+            <a class="nav-link text-white" href="#">Blog</a>
           </li>
         </ul>
       </div>
