add search filter

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </nav>
 
     <div class="container mt-4"> <!-- Added container for alignment -->
+      <input type="text" id="search-input" class="form-control mb-3" placeholder="Search for a Pokémon...">
       <ul class="pokemon-list list-group"></ul>
     </div>
 
