--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    "<link rel="stylesheet" href="dist/styles.min.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/styles.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Simple JS app</title>
-  </head>
-  <body>
+    <title>Pokémon Repository</title>
+</head>
+<body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-      <a class="navbar-brand text-white" href="#">Pokemon Repository</a>
+      <a class="navbar-brand text-white" href="#">Pokémon Repository</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,34 +30,33 @@
       </div>
     </nav>
 
-    <div class="container mt-4"> <!-- Added container for alignment -->
-      <input type="text" id="search-input" class="form-control mb-3" placeholder="Search for a Pokémon...">
-      <ul class="pokemon-list list-group"></ul>
+    <div class="container mt-4">
+      <input type="text" id="search-input" placeholder="Search for Pokémon" class="form-control mb-3">
+      <div class="pokemon-list row"></div> <!-- Added 'row' class for proper alignment -->
     </div>
 
     <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
           <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title" id="pokemonModalLabel">Pokemon Details</h5>
+                  <h5 class="modal-title" id="pokemonModalLabel">Pokémon Details</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                   </button>
               </div>
               <div class="modal-body">
-                  <img class="modal-image" src="" alt="Pokemon Image">
+                  <img class="modal-image" src="" alt="Pokémon Image">
                   <p class="modal-details"></p>
               </div>
           </div>
       </div>
     </div>
-    
-    <script src="dist/scripts.min.js"></script> 
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
-    <script src="js/scripts.js"></script>   
-  </body>
+    <script src="js/scripts.js"></script> 
+</body>
 </html>
